<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#03A9F4"
    tools:context=".DetailUserActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/name_detail"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/name_user"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="#FFFFF8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

    <TextView
        android:id="@+id/username"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_detail"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usr_company"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/company"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usr_location"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/usr_location"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usr_company"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usr_followers"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/followers"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usr_location" />

    <TextView
        android:id="@+id/usr_repo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/repository"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/usr_following"
        app:layout_constraintStart_toEndOf="@+id/usr_followers"
        app:layout_constraintTop_toBottomOf="@+id/usr_location"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/usr_following"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:text="@string/following"
        android:textColor="#455A64"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usr_location"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/menu_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:background="#FFFFFA"
        android:minHeight="?actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usr_repo"
        app:tabIndicatorFullWidth="false"
        app:tabIndicatorHeight="2dp"
        app:tabMode="fixed"
        app:tabRippleColor="@null"
        tools:ignore="MissingConstraints" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/tab_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="350dp"
        android:background="#FFFFF8"
        />

</androidx.constraintlayout.widget.ConstraintLayout>